testsuite/tests/checks/non_spark_attributes/test.out
spark.adb:5:25: error: attribute is not from the SPARK subset
5 |    Var_A : Integer_A := Var'Access;  --  FLAG
  |                         ^^^^^^^^^^ 

